@@ -32,7 +32,7 @@
 #include <stdbool.h>
 #include <stdint.h>
 
-#include <libebl.h>
+typedef struct ebl Ebl;
 
 
 /* Opaque type for the assembler context descriptor.  */
