@@ -19,6 +19,7 @@
 # include <config.h>
 #endif
 
+#include ELFUTILS_HEADER(ebl)
 #include ELFUTILS_HEADER(asm)
 #include <libelf.h>
 #include <stdio.h>
