@@ -1,3 +1,7 @@
+2020-01-08  Mark Wielaard  <mark@klomp.org>
+
+	* asm-test?.c: include libebl.h.
+
 2020-01-11  Frank Ch. Eigler  <fche@redhat.com>
 
 	* run-debuginfod-find.sh: Test --fdcache* options.
